@@ -15,6 +15,8 @@ Add new items to top.
    Src/Languages/Spanish: MergeSpanish.rc
  Quiet warnings from DiffList.cpp
   Src: DiffList.cpp
+ Some SPECIAL_ITEM_POS cleanups
+  Src: DirActions.cpp DirDoc.cpp DirView.cpp DirView.h
 
 2006-09-21 WinMerge experimental release 2.5.7.1 (SVN revision 3600)
 
